borrando index vacio

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,7 @@
 {
-    "python.pythonPath": "venv/bin/python3"
+    "python.pythonPath": "venv/bin/python3",
+    "python.venvFolders": [
+        "/home/javier/proyectoflask/entornoflask/"
+    ],
+    "python.venvPath": "/home/javier/proyectoflask/entornoflask/"
 }
