--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,7 @@ pkg/
 src/
 venv/
 __pycache__/objetivos.cpython-37.pyc
+ app/__pycache__/__init__.cpython-37.pyc                                
+ app/__pycache__/forms.cpython-37.pyc                                       
+ app/__pycache__/models.cpython-37.pyc                                      
+ app/__pycache__/routes.cpython-37.pyc
